// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CodeSearchResults /> basic rendering should render empty table data 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
>
  <div
    style={
      Object {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-times mr-2"
              id="Icon6"
            />
            Close search results
          </button>
        </div>
      </div>
      <div
        className="fade alert-content alert alert-warning show"
        role="alert"
      >
        <span
          className="pgn__icon alert-icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 15h-2v-2h2v2Zm0-4h-2V7h2v6Z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          className="pgn__alert-message-wrapper"
        >
          <div
            className="alert-message-content"
          >
            There are no results.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render error 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
>
  <div
    style={
      Object {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-times mr-2"
              id="Icon7"
            />
            Close search results
          </button>
        </div>
      </div>
      <div
        className="fade alert-content alert alert-danger show"
        role="alert"
      >
        <span
          className="pgn__icon alert-icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 15h-2v-2h2v2Zm0-4h-2V7h2v6Z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          className="pgn__alert-message-wrapper"
        >
          <div
            className="alert-message-content"
          >
            <div
              className="alert-heading h4"
            >
              Unable to load data
            </div>
            <p>
              Try refreshing your screen 
              Network Error
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render loading 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
>
  <div
    style={
      Object {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-times mr-2"
              id="Icon1"
            />
            Close search results
          </button>
        </div>
      </div>
      <div>
        <div
          className="sr-only"
        >
          Loading...
        </div>
        <span
          aria-busy={true}
          aria-live="polite"
        >
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render nothing visible when isOpen prop is false 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
/>
`;

exports[`<CodeSearchResults /> basic rendering should render table data 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
>
  <div
    style={
      Object {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-times mr-2"
              id="Icon2"
            />
            Close search results
          </button>
        </div>
      </div>
      <div
        className="code-search-results-table"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <div
              className="table-responsive"
            >
              <table
                className="table table-sm table-striped"
              >
                <thead
                  className=""
                >
                  <tr
                    className=""
                  >
                    <th
                      className=""
                      scope="col"
                    >
                      Coupon Batch
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Code
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Redeemed
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Redemption Date
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Course Title
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Actions
                    </th>
                  </tr>
                </thead>
                <tbody
                  className=""
                >
                  <tr
                    className=""
                  >
                    <td
                      className=""
                      scope={null}
                    >
                      Test Coupon Name
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      Y7XS3OGG7WB7KQ5R
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      <span
                        aria-hidden={true}
                        className="fa fa-check text-primary"
                        id="Icon3"
                      />
                      <span
                        className="sr-only"
                      >
                        has been redeemed
                      </span>
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      August 28, 2019
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      Test Course Title
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                  </tr>
                  <tr
                    className=""
                  >
                    <td
                      className=""
                      scope={null}
                    >
                      Test Coupon Name 2
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      CMX9N1LPGTUSL7DU
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                  </tr>
                  <tr
                    className=""
                  >
                    <td
                      className=""
                      scope={null}
                    >
                      Test Coupon Name
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      Y7XS3OGG7WB7KQ5R
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      <span
                        aria-hidden={true}
                        className="fa fa-check text-primary"
                        id="Icon4"
                      />
                      <span
                        className="sr-only"
                      >
                        has been redeemed
                      </span>
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      August 30, 2019
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      Test Course Title
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                  </tr>
                  <tr
                    className=""
                  >
                    <td
                      className=""
                      scope={null}
                    >
                      Test Coupon Name
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      FAG2LVLNHAKIXQ0Q
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div
          className="row mt-2"
        >
          <div
            className="col d-flex justify-content-center"
          >
            <nav
              aria-label="code-search-results-pagination"
              className="pagination-default"
            >
              <div
                aria-atomic={true}
                aria-live="polite"
                aria-relevant="text"
                className="sr-only"
              >
                Page 1, Current Page, of 1
              </div>
              <ul
                className="pagination"
              >
                <li
                  className="page-item disabled"
                >
                  <button
                    aria-label="Previous"
                    className="previous page-link btn btn-primary"
                    disabled={true}
                    onClick={[Function]}
                    tabIndex="-1"
                    type="button"
                  >
                    <div>
                      <span
                        className="pgn__icon"
                      >
                        <svg
                          aria-hidden={true}
                          fill="none"
                          focusable={false}
                          height={24}
                          role="img"
                          viewBox="0 0 24 24"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      Previous
                    </div>
                  </button>
                </li>
                <li
                  className="page-item disabled"
                >
                  <button
                    aria-label="Next"
                    className="next page-link btn btn-primary"
                    disabled={true}
                    onClick={[Function]}
                    tabIndex="-1"
                    type="button"
                  >
                    <div>
                      Next
                      <span
                        className="pgn__icon"
                      >
                        <svg
                          aria-hidden={true}
                          fill="none"
                          focusable={false}
                          height={24}
                          role="img"
                          viewBox="0 0 24 24"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render table data when searchQuery is a code 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
>
  <div
    style={
      Object {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              FAG2LVLNHAKIXQ0Q
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-times mr-2"
              id="Icon5"
            />
            Close search results
          </button>
        </div>
      </div>
      <div
        className="code-search-results-table"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <div
              className="table-responsive"
            >
              <table
                className="table table-sm table-striped"
              >
                <thead
                  className=""
                >
                  <tr
                    className=""
                  >
                    <th
                      className=""
                      scope="col"
                    >
                      Coupon Batch
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Code
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Redeemed
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Redemption Date
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Assigned To
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Course Title
                    </th>
                    <th
                      className=""
                      scope="col"
                    >
                      Actions
                    </th>
                  </tr>
                </thead>
                <tbody
                  className=""
                >
                  <tr
                    className=""
                  >
                    <td
                      className=""
                      scope={null}
                    >
                      Test Coupon Name
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      FAG2LVLNHAKIXQ0Q
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      test@test.com
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      -
                    </td>
                    <td
                      className=""
                      scope={null}
                    >
                      <button
                        className="remind-btn btn-sm p-0 btn btn-link"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        Remind
                      </button>
                       | 
                      <button
                        className="revoke-btn btn-sm p-0 btn btn-link"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        Revoke
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div
          className="row mt-2"
        >
          <div
            className="col d-flex justify-content-center"
          >
            <nav
              aria-label="code-search-results-pagination"
              className="pagination-default"
            >
              <div
                aria-atomic={true}
                aria-live="polite"
                aria-relevant="text"
                className="sr-only"
              >
                Page 1, Current Page, of 1
              </div>
              <ul
                className="pagination"
              >
                <li
                  className="page-item disabled"
                >
                  <button
                    aria-label="Previous"
                    className="previous page-link btn btn-primary"
                    disabled={true}
                    onClick={[Function]}
                    tabIndex="-1"
                    type="button"
                  >
                    <div>
                      <span
                        className="pgn__icon"
                      >
                        <svg
                          aria-hidden={true}
                          fill="none"
                          focusable={false}
                          height={24}
                          role="img"
                          viewBox="0 0 24 24"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      Previous
                    </div>
                  </button>
                </li>
                <li
                  className="page-item disabled"
                >
                  <button
                    aria-label="Next"
                    className="next page-link btn btn-primary"
                    disabled={true}
                    onClick={[Function]}
                    tabIndex="-1"
                    type="button"
                  >
                    <div>
                      Next
                      <span
                        className="pgn__icon"
                      >
                        <svg
                          aria-hidden={true}
                          fill="none"
                          focusable={false}
                          height={24}
                          role="img"
                          viewBox="0 0 24 24"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
